adds player name
* player name can be set when adding player
* player can be renamed
